# Research_assistantLLM

./: .gitignore  README.md  evaluate.py  pyproject.toml
backend/: models.py  rag_graph.py
